# autere_db

./: ARCHITECTURE.md  Cargo.toml  README.md
autere_db/: Cargo.toml
autere_db/benches/: benchmark.rs  utils.rs
autere_db/src/: lock.rs  memtable_primary.rs  memtable_secondary.rs  record.rs  row.rs
autere_db/tests/: integration.rs
benches/: benchmark.rs  utils.rs
browser/: app.py
browser/static/: htmp.js  styles.css
browser/templates/: aside.html.j2  base.html.j2  form_find.html.j2  form_range.html.j2  frag_aside.html.j2  frag_error.html.j2  frag_form_delete.html.j2  frag_form_find.html.j2  frag_form_range.html.j2  frag_results.html.j2  index.html.j2  page_main.html.j2
demo/: README.md  app.py  requirements.txt
demo/static/: styles.css
demo/templates/: base.html.j2  frag_aside.html.j2  frag_aside_link.html.j2  frag_error.html.j2  frag_form_upsert.html.j2  frag_messages.html.j2  page_error.html.j2  page_index.html.j2  page_main.html.j2
log_db/: Cargo.toml
log_db/benches/: benchmark.rs  utils.rs
log_db/src/: common.rs  config.rs  engine.rs  forward_log_reader.rs  lib.rs  lock.rs  log_reader_forward.rs  log_reader_reverse.rs  memtable_primary.rs  memtable_secondary.rs  primary_memtable.rs  record.rs  reverse_log_reader.rs  row.rs  schema.rs  secondary_memtable.rs
log_db/tests/: integration.rs
py_bindings/: Cargo.toml  example.py  log_db.pyi  pyproject.toml
py_bindings/src/: lib.rs
src/: common.rs  lib.rs  log_reader.rs  primary_memtable.rs  reverse_log_reader.rs  secondary_memtable.rs
tests/: integration.rs
tests/resources/: test_db1  (+2 more)
(+2 files in other folders)
